logs/collective.portlet.group.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/js'...
Listing './lib/python3.5/site-packages/collective/js/datatables'...
Listing './lib/python3.5/site-packages/collective/js/datatables/example'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/de'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/en'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/es'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/fi'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/fr'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/it'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/lt'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/nl'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/zh_CN'...
Listing './lib/python3.5/site-packages/collective/js/datatables/locales/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/js/datatables/profiles'...
Listing './lib/python3.5/site-packages/collective/js/datatables/profiles/plone4'...
Listing './lib/python3.5/site-packages/collective/js/datatables/profiles/plone5'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/AutoFill'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/AutoFill/media'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/ColReorder'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/ColReorder/media'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/ColVis'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/ColVis/media'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/FixedColumns'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/FixedColumns/media'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/FixedHeader'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/FixedHeader/media'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/KeyTable'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/KeyTable/media'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/Responsive'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/Responsive/media'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/Scroller'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/Scroller/media'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/TableTools'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/extras/TableTools/media'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/media'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/media/css'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/media/images'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/media/js'...
Listing './lib/python3.5/site-packages/collective/js/datatables/resources/media/js/css'...
Listing './lib/python3.5/site-packages/collective/js/datatables/tests'...
Listing './lib/python3.5/site-packages/collective/portlet'...
Listing './lib/python3.5/site-packages/collective/portlet/group'...
Compiling './lib/python3.5/site-packages/collective/portlet/group/groupportlet.py'...
***   File "./lib/python3.5/site-packages/collective/portlet/group/groupportlet.py", line 40
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/portlet/group/profiles'...
Listing './lib/python3.5/site-packages/collective/portlet/group/profiles/default'...
Listing './lib/python3.5/site-packages/collective/portlet/group/tests'...
Listing './lib/python3.5/site-packages/collective.js.datatables-4.1.2.egg-info'...
Listing './lib/python3.5/site-packages/collective.portlet.group-2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
